airflow_docker_tutorial/logs/dag_id=dag_pg_op/run_id=scheduled__2023-02-10T15:21:00+00:00/task_id=create_table/attempt=1.log
[2023-02-11T15:21:00.991+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_pg_op.create_table scheduled__2023-02-10T15:21:00+00:00 [queued]>
[2023-02-11T15:21:01.001+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: dag_pg_op.create_table scheduled__2023-02-10T15:21:00+00:00 [queued]>
[2023-02-11T15:21:01.001+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2023-02-11T15:21:01.001+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 6
[2023-02-11T15:21:01.001+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2023-02-11T15:21:01.014+0000] {taskinstance.py:1300} INFO - Executing <Task(PostgresOperator): create_table> on 2023-02-10 15:21:00+00:00
[2023-02-11T15:21:01.019+0000] {standard_task_runner.py:55} INFO - Started process 1319 to run task
[2023-02-11T15:21:01.021+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_pg_op', 'create_table', 'scheduled__2023-02-10T15:21:00+00:00', '--job-id', '84', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_pg_op.py', '--cfg-path', '/tmp/tmpjmdm11r6']
[2023-02-11T15:21:01.021+0000] {standard_task_runner.py:83} INFO - Job 84: Subtask create_table
[2023-02-11T15:21:01.074+0000] {task_command.py:388} INFO - Running <TaskInstance: dag_pg_op.create_table scheduled__2023-02-10T15:21:00+00:00 [running]> on host 227aa417ae8e
[2023-02-11T15:21:01.189+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=naufal
AIRFLOW_CTX_DAG_ID=dag_pg_op
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-02-10T15:21:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-02-10T15:21:00+00:00
[2023-02-11T15:21:01.189+0000] {sql.py:254} INFO - Executing: 
            CREATE TABLE IF NOT EXITS dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt,dag_id)
            );
        
[2023-02-11T15:21:01.197+0000] {base.py:73} INFO - Using connection ID 'pg_docker' for task execution.
[2023-02-11T15:21:01.386+0000] {base.py:73} INFO - Using connection ID 'pg_docker' for task execution.
[2023-02-11T15:21:01.389+0000] {sql.py:375} INFO - Running statement: 
            CREATE TABLE IF NOT EXITS dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt,dag_id)
            );
        , parameters: None
[2023-02-11T15:21:01.390+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "EXITS"
LINE 2:             CREATE TABLE IF NOT EXITS dag_runs (
                                        ^

[2023-02-11T15:21:01.399+0000] {taskinstance.py:1323} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_pg_op, task_id=create_table, execution_date=20230210T152100, start_date=20230211T152100, end_date=20230211T152101
[2023-02-11T15:21:01.411+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 84 for task create_table (syntax error at or near "EXITS"
LINE 2:             CREATE TABLE IF NOT EXITS dag_runs (
                                        ^
; 1319)
[2023-02-11T15:21:01.433+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2023-02-11T15:21:01.463+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
